<resources>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="app_name">customTabExample</string>
    <string name="moscow">Москва</string>
    <string name="pizza">Пицца</string>
    <string name="combo">Комбо</string>
    <string name="deserts">Десерты</string>
    <string name="sprite">Напитки</string>
    <string name="snacks">Закуски</string>
    <string name="souses">Соусы</string>
    <string name="title">Title</string>
    <string name="sometext">sometext</string>
    <string name="_345">от 345 р</string>
    <string name="click">Click!</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="error">Ошибка!</string>

</resources>